--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     },
     "homepage": "https://github.com/aws-cloudformation/cloudformation-cli-typescript-plugin#readme",
     "dependencies": {
-        "@aws-sdk/client-cloudwatch": "^3.428.0",
-        "@aws-sdk/client-s3": "^3.428.0",
         "autobind-decorator": "^2.4.0",
         "class-transformer": "^0.5.1",
         "reflect-metadata": "^0.1.13",
@@ -44,7 +42,9 @@
     },
     "devDependencies": {
         "@aws-sdk/client-cloudformation": "^3.428.0",
+        "@aws-sdk/client-cloudwatch": "^3.428.0",
         "@aws-sdk/client-cloudwatch-logs": "^3.428.0",
+        "@aws-sdk/client-s3": "^3.428.0",
         "@aws-sdk/client-sts": "^3.428.0",
         "@smithy/smithy-client": "^2.1.9",
         "@smithy/types": "^2.3.5",
@@ -53,8 +53,8 @@
         "@types/jest": "^26.0.15",
         "@types/node": "^18.0.0",
         "@types/uuid": "^7.0.0",
-        "@typescript-eslint/eslint-plugin": "^4.8.1",
-        "@typescript-eslint/parser": "^4.8.1",
+        "@typescript-eslint/eslint-plugin": "^6.7.5",
+        "@typescript-eslint/parser": "^6.7.5",
         "@yarnpkg/sdks": "^3.0.0-rc.53",
         "eslint": "^7.13.0",
         "eslint-config-prettier": "^6.15.0",
@@ -65,10 +65,11 @@
         "eslint-plugin-prettier": "^3.1.3",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
+        "jest-html-reporters": "^3.1.4",
         "prettier": "^2.2.0",
         "ts-jest": "^26.4.4",
         "ts-node": "^9.1.1",
-        "typescript": "^5.2.2"
+        "typescript": "^4.9.5"
     },
     "peerDependencies": {
         "@aws-sdk/client-cloudwatch": "^3.428.0",
