--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
-    "extends": "@tsconfig/node18/tsconfig.json",
     "compilerOptions": {
+        "lib": ["ES2020"],
+        "target": "ES2020",
+        "esModuleInterop": true,
         "strict": true,
         "noImplicitAny": false,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "node16",
         "strictNullChecks": false,
         "strictPropertyInitialization": false,
         "allowJs": true,
