--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        python: [ 3.7, 3.8, 3.9 ]
-        node: [ 14 ]
+        python: [ 3.8, 3.9, 3.10, 3.11 ]
+        node: [ 18, 20 ]
     env:
       SAM_CLI_TELEMETRY: "0"
       AWS_REGION: "us-east-1"
