--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
-    "extends": "@tsconfig/node14/tsconfig.json",
     "compilerOptions": {
+        "lib": ["ES2020"],
+        "target": "ES2020",
+        "esModuleInterop": true,
         "strict": true,
         "noImplicitAny": false,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "NodeNext",
         "strictNullChecks": false,
         "strictPropertyInitialization": false,
         "allowJs": true,
@@ -17,7 +21,8 @@
             "~/*": [
                 "src/*"
             ]
-        }
+        },
+        "types": ["node", "jest"]
     },
     "include": [
         "src/**/*.ts"
