--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
+cython = "<3.0.0"
 
 [packages]
 cloudformation-cli-typescript-plugin = {editable = true,path = "."}
