--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
-        "lib": ["ES2020"],
+        "lib": [
+            "ES2020"
+        ],
         "target": "ES2020",
         "esModuleInterop": true,
         "strict": true,
@@ -22,7 +24,10 @@
                 "src/*"
             ]
         },
-        "types": ["node", "jest"]
+        "types": [
+            "node",
+            "jest"
+        ]
     },
     "include": [
         "src/**/*.ts"
