--- a/package.json
+++ b/package.json
@@ -71,12 +71,11 @@
         "typescript": "^4.9.5"
     },
     "peerDependencies": {
-        "aws-sdk": "^2.712.0"
-    },
-    "peerDependenciesMeta": {
-        "aws-sdk": {
-            "optional": true
-        }
+        "@aws-sdk/client-cloudformation": "^3.428.0",
+        "@aws-sdk/client-cloudwatch": "^3.428.0",
+        "@aws-sdk/client-cloudwatch-logs": "^3.428.0",
+        "@aws-sdk/client-s3": "^3.428.0",
+        "@aws-sdk/client-sts": "^3.428.0"
     },
     "prettier": {
         "parser": "typescript",
