--- a/python/rpdk/typescript/templates/package.json
+++ b/python/rpdk/typescript/templates/package.json
@@ -21,6 +21,10 @@
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
-        "aws-sdk": "^2.656.0"
+        "@aws-sdk/client-cloudformation": "^3.428.0",
+        "@aws-sdk/client-cloudwatch": "^3.428.0",
+        "@aws-sdk/client-cloudwatch-logs": "^3.428.0",
+        "@aws-sdk/client-s3": "^3.428.0",
+        "@aws-sdk/client-sts": "^3.428.0"
     }
 }
