--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,17 +48,16 @@ repos:
     hooks:
       - id: bandit
         files: "^python/"
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.26.0
-    hooks:
-      - id: eslint
-        args: [--fix]
-        types: []
-        files: (.*.js$|.*.ts$)
-        additional_dependencies:
-          - eslint@6.8.0
   - repo: local
     hooks:
+      - id: eslint-local
+        name: eslint-local
+        description: run eslint in the local repo
+        entry: npm run lint
+        language: system
+        # ignore all files, run on hard-coded modules instead
+        pass_filenames: false
+        always_run: true
       - id: pylint-local
         name: pylint-local
         description: Run pylint in the local virtualenv
