--- a/python/rpdk/typescript/templates/package.json
+++ b/python/rpdk/typescript/templates/package.json
@@ -20,6 +20,23 @@
         "@types/node": "^14.0.0",
         "typescript": "^4.1.2"
     },
+    "peerDependenciesMeta": {
+        "@aws-sdk/client-cloudformation": {
+            "optional": true
+        },
+        "@aws-sdk/client-cloudwatch": {
+            "optional": true
+        },
+        "@aws-sdk/client-cloudwatch-logs": {
+            "optional": true
+        },
+        "@aws-sdk/client-s3": {
+            "optional": true
+        },
+        "@aws-sdk/client-sts": {
+            "optional": true
+        }
+    },
     "optionalDependencies": {
         "@aws-sdk/client-cloudformation": "^3.428.0",
         "@aws-sdk/client-cloudwatch": "^3.428.0",
