--- a/python/rpdk/typescript/data/tsconfig.json
+++ b/python/rpdk/typescript/data/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES2017",
+        "target": "ES2020",
         "module": "commonjs",
         "noImplicitAny": true,
         "alwaysStrict": true,
         "esModuleInterop": true,
-        "moduleResolution": "node",
+        "moduleResolution": "NodeNext",
         "allowJs": true,
         "experimentalDecorators": true,
         "outDir": "dist"
