--- a/python/rpdk/typescript/templates/package.json
+++ b/python/rpdk/typescript/templates/package.json
@@ -7,6 +7,7 @@
     "files": [
         "dist"
     ],
+    "type": "module",
     "scripts": {
         "build": "npx tsc",
         "prepack": "npm run build",
@@ -17,8 +18,8 @@
         "class-transformer": "0.3.1"
     },
     "devDependencies": {
-        "@types/node": "^14.0.0",
-        "typescript": "^4.1.2"
+        "@types/node": "^18.0.0",
+        "typescript": "^4.9.5"
     },
     "peerDependenciesMeta": {
         "@aws-sdk/client-cloudformation": {
