--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,12 +96,12 @@ jobs:
         name: Run Jest Unit Tests
         run: |
           npx jest --ci --verbose --runInBand
-      - name: Upload Coverage
-        id: codecov
-        run: |
-          curl -s https://codecov.io/bash > codecov.sh
-          bash codecov.sh -f coverage/py/coverage.xml -F unittests -n codecov-python
-          bash codecov.sh -f coverage/ts/coverage-final.json -F unittests -n codecov-typescript
+      # - name: Upload Coverage
+      #   id: codecov
+      #   run: |
+      #     curl -s https://codecov.io/bash > codecov.sh
+      #     bash codecov.sh -f coverage/py/coverage.xml -F unittests -n codecov-python
+      #     bash codecov.sh -f coverage/ts/coverage-final.json -F unittests -n codecov-typescript
       - name: Upload Coverage Artifacts
         id: upload_coverage
         uses: actions/upload-artifact@v3
